--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "miragejs": "^0.1.48",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
   }
